<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WebMarket</string>
    <string name="search_hint">放大镜亲,在这里搜索哦</string>
    <string name="my_personal_center">个人中心</string>
    <string name="return_to_top">返回顶部</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="pullup_to_load">上拉加载</string>
    <string name="release_to_refresh">释放刷新</string>
    <string name="refreshing">刷新中</string>
    <string name="release_to_load">释放加载</string>
    <string name="loading">加载中</string>
    <string name="u_center">我的</string>
    <string name="setting">软件设置</string>
    <string name="can_not_locate">亲，你的手机不能定位啊！</string>
    <string name="update_hint">有可用更新</string>
    <string name="no_updates">没有可用更新</string>
    <string name="net_err_for_update">网络连接错误，不能检查更新</string>
    <string name="update_service">升级服务</string>
    <string name="net_err">网络请求关闭出现错误</string>
    <string name="dialog">对话框</string>
    <string name="show_update_info">显示更新请求</string>
    <string name="btn_click">按钮点击</string>
    <string name="send_download_request">发送下载请求</string>
    <string name="handle_request">请求处理</string>
    <string name="handle_download_request">处理下载请求</string>
    <string name="result_code">请求返回码</string>
    <string name="download">下载</string>
    <string name="download_done">下载完毕准备安装</string>
    <string name="download_stoped">用户中止了下载</string>
    <string name="input_username_hint">输入用户名/手机号/邮箱</string>
    <string name="input_username_tab">账号：</string>
    <string name="input_password_tab">密码：</string>
    <string name="input_password_hint">请输入密码</string>
    <string name="exit">退出</string>
    <string name="login">登录</string>
    <string name="my_favorite">我的收藏</string>
    <string name="history">浏览记录</string>
    <string name="manage_prder_form">订单管理</string>
    <string name="manage_account">账号管理</string>
    <string name="shopping_cart">购物车</string>
    <string name="categoty">分类浏览</string>
    <string name="my_indent">我的订单</string>
    <string name="delivery_address">收货地址</string>
    <string name="modify_my_data">修改资料</string>
    <string name="call_center">客服中心</string>
    <string name="cancel">取消</string>
    <string name="mobile_sign_up">手机快速注册</string>
    <string name="find_password_back">找回密码</string>
    <string name="next_step">下一步</string>
    <string name="country">国家地区</string>
    <string name="china_hint">中国大陆+86</string>
    <string name="mobile_num">手机号</string>
    <string name="input_mobile_num_hint">请输入手机号</string>
    <string name="verifycode_sended_to">验证码已发送到</string>
    <string name="sign_up">注册</string>
    <string name="send_sms">发送短信</string>
    <string name="sms_send_hint">秒后再次发送</string>
    <string name="not_login">尚未登录</string>
    <string name="logout">退出登录</string>
    <string name="shut_down_client">退出客户端</string>
    <string name="ok">确定</string>
    <string name="login_fail">登录失败，密码或账号不正确</string>
    <string name="nickname_hint">2–20个字符</string>
    <string name="set_password">设置账号密码</string>
    <string name="password_hint">6–20个字符，包含字母和数字</string>
    <string name="set_nickname">设置昵称</string>
    <string name="input_verify_code">输入验证码</string>
    <string name="prepare_download">准备下载中</string>
    <string name="downloading">开始下载</string>
    <string name="advise">意见反馈</string>
    <string name="clean">清除缓存</string>
    <string name="now_version">当前版本</string>
    <string name="wrong_mobile_num_format">手机号格式不正确</string>
    <string name="pay_points">积分：</string>
    <string name="user_money">余额：</string>
    <string name="search_result">的搜索结果</string>
    <string name="detail">详情</string>
</resources>
