<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
            android:background="@color/grey"
        >
    <RelativeLayout
            android:id="@+id/title"
            android:background="@color/white"
            android:layout_width="match_parent" android:layout_height="60dp">
        <TextView style="@style/header_text"
                  android:text="手机注册"
                />
        <ImageView
                android:padding="10dp"
                android:id="@+id/back"
                style="@style/header_left_btn"
                android:src="@drawable/jiantouleft"
                />
    </RelativeLayout>
    <FrameLayout
            android:layout_below="@id/title"
            style="@style/divider"
            android:id="@+id/divider1"
            />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/verifycode_sended_to"
              android:textSize="18sp"
              android:layout_marginTop="18dp"
              android:layout_marginLeft="10dp"
              android:id="@+id/text"
              android:textColor="@color/gray_text"
                android:layout_below="@id/divider1"
            />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="351323135131"
              android:id="@+id/sign_up_mobile_num"
              android:textSize="18sp"
              android:textColor="@color/black"
              android:layout_marginTop="18dp"
              android:layout_toRightOf="@id/text"
                android:layout_below="@id/divider1"
            />
    <RelativeLayout
            android:layout_marginTop="5dp"
            android:id="@+id/input2"
            android:layout_width="match_parent" android:layout_height="50dp"
            android:layout_below="@id/sign_up_mobile_num"
            android:background="@color/white"
            >
        <EditText android:background="@null"
                  android:id="@id/sign_up_verify_code_text"
                  android:inputType="text"
                  android:layout_centerVertical="true"
                  android:hint="@string/input_verify_code"
                  android:gravity="left"
                  android:layout_marginLeft="10dp"
                  android:layout_width="200dp" android:layout_height="wrap_content"/>
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:background="@drawable/white_with_black_border"
                  android:text="@string/send_sms"
                  android:layout_centerVertical="true"
                  android:layout_alignParentRight="true"
                  android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                  android:textSize="14sp"
                  android:padding="12dp"
                  android:textColor="@color/gray_text"
                    android:id="@+id/sign_up_sms_timer"
                />
    </RelativeLayout>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/set_nickname"
              android:textSize="18sp"
              android:layout_marginTop="18dp"
              android:layout_marginLeft="10dp"
              android:id="@+id/text2"
              android:layout_below="@id/input2"
              android:textColor="@color/gray_text"
            />
    <RelativeLayout
            android:layout_marginTop="5dp"
            android:id="@+id/input3"
            android:layout_width="match_parent" android:layout_height="50dp"
            android:layout_below="@id/text2"
            android:background="@color/white"
            >
        <EditText android:background="@null"
                  android:id="@id/sign_up_nickname_text"
                  android:inputType="text"
                  android:layout_centerVertical="true"
                  android:hint="@string/nickname_hint"
                  android:gravity="left"
                  android:layout_marginLeft="10dp"
                  android:layout_width="match_parent" android:layout_height="wrap_content"/>
    </RelativeLayout>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/set_password"
              android:textSize="18sp"
              android:layout_marginTop="18dp"
              android:layout_marginLeft="10dp"
              android:id="@+id/text3"
              android:layout_below="@id/input3"
              android:textColor="@color/gray_text"
            />
    <RelativeLayout
            android:layout_marginTop="5dp"
            android:id="@+id/input4"
            android:layout_width="match_parent" android:layout_height="50dp"
            android:layout_below="@id/text3"
            android:background="@color/white"
            >
        <EditText android:background="@null"
                  android:id="@id/sign_up_password_text"
                  android:inputType="textPassword"
                  android:layout_centerVertical="true"
                  android:hint="@string/password_hint"
                  android:gravity="left"
                  android:layout_marginLeft="10dp"
                  android:layout_width="match_parent" android:layout_height="wrap_content"/>
    </RelativeLayout>

    <Button android:layout_width="300dp" android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/input4"
            android:layout_marginTop="10dp"
            android:background="@drawable/exit_button"
            android:gravity="center"
            android:text="@string/sign_up"
            android:enabled="false"
            android:textColor="@color/white"
            android:id="@id/login_confirm_btn"
            />
</RelativeLayout>