<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
            android:background="@color/grey"
              android:orientation="vertical"
        >
    <RelativeLayout
            style="@style/title_bar"
            >
        <ImageButton
                android:src="@drawable/jiantouleft"
                     android:id="@id/setting_back"
                     android:layout_alignParentLeft="true"
                     style="@style/title_bar_icon"
                />
        <TextView android:layout_width="match_parent" android:layout_height="match_parent"
                  style="@style/header_text"
                  android:text="@string/setting"
                />
    </RelativeLayout>
    <FrameLayout
            style="@style/divider"
            />
    <RelativeLayout
            style="@style/ucenter_item" android:id="@+id/your_advise"
            android:visibility="gone"
            >
        <TextView
                android:layout_marginLeft="5dp"
                style="@style/ucenter_item_text"
                android:text="@string/advise"
                />
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:src="@drawable/jiantou"
                   android:id="@+id/imageView7"
                   android:layout_centerVertical="true" android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <FrameLayout
            style="@style/divider"
            />
    <RelativeLayout style="@style/ucenter_item" android:id="@+id/clean_cache">
        <TextView
                android:layout_marginLeft="5dp"
                style="@style/ucenter_item_text" android:text="@string/clean" android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>
        <TextView
                android:textSize="18sp"
                android:text="22M"
                android:textColor="@color/gray_text"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:src="@drawable/jiantou" android:id="@+id/cache_size" android:layout_centerVertical="true"
                  android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <FrameLayout
            style="@style/divider"
            />
    <RelativeLayout style="@style/ucenter_item" android:id="@+id/version_detail">
        <TextView style="@style/ucenter_item_text" android:text="@string/now_version" android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="5dp"
                />
        <TextView
                android:textColor="@color/gray_text"
                android:textSize="18sp"
                android:text="2.23"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                   android:src="@drawable/jiantou" android:id="@+id/version_code_text" android:layout_centerVertical="true"
                   android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <FrameLayout
            style="@style/divider"
            />
    <Button
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/exit_button_enable"
            android:text="@string/exit"
            android:id="@id/setting_exit_btn"
            android:layout_width="match_parent" android:layout_height="50dp"/>
</LinearLayout>