<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
        >
    <LinearLayout android:orientation="vertical"
                  android:layout_centerInParent="true"
                  android:background="@drawable/transparent_white_blue_border"
                  android:layout_width="200dp" android:layout_height="wrap_content">

        <TextView
                android:gravity="center"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_login"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:id="@+id/textView"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/cancel"
                    android:text="@string/cancel"
                    android:padding="20dp"
                    android:textColor="@color/black"
                    android:background="@drawable/login_dialog_btn_left"
                    />
            <Button android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/login"
                    android:id="@+id/ok"
                    android:padding="20dp"
                    android:textColor="@color/light_blue"
                    android:background="@drawable/login_dialog_btn_right"
                    />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>