<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
            android:background="@color/grey"
        >
    <RelativeLayout
            android:id="@+id/title"
            android:background="@color/white"
                    android:layout_width="match_parent" android:layout_height="60dp">
            <TextView style="@style/header_text"
                        android:text="手机注册"
                    />
            <ImageView
                    android:id="@id/sign_up_back"
                    style="@style/header_left_btn"
                    android:src="@drawable/jiantou"
                    />
    </RelativeLayout>
    <FrameLayout
            android:layout_below="@id/title"
            style="@style/divider"
            />

    <FrameLayout
            android:layout_below="@id/title"
            style="@style/divider"
            android:layout_marginTop="15dp"
            android:id="@id/divider"
            />
    <RelativeLayout
            android:id="@+id/input1"
            android:layout_width="match_parent" android:layout_height="50dp"
                    android:layout_below="@id/divider"
                    android:background="@color/white"
            >
        <TextView android:layout_width="80dp" android:layout_height="wrap_content"
                  android:text="@string/country" android:textColor="@color/gray_text"
                  android:layout_centerVertical="true"
                  android:layout_marginLeft="20dp"
                  android:textSize="20sp"
                  android:id="@id/login_username_text_hint"
                />
        <LinearLayout
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:id="@id/sign_up_view_country_list"
                android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:id="@id/login_username_text"
                    android:layout_toRightOf="@id/login_username_text_hint"
                    android:layout_centerVertical="true"
                    android:hint="@string/china_hint"
                    android:inputType="text"
                    android:textSize="16sp"
                    android:gravity="right"
                    android:layout_width="200dp" android:layout_height="wrap_content"/>
            <ImageButton android:layout_width="30dp" android:layout_height="30dp"
                         android:layout_alignParentRight="true"
                         android:layout_marginRight="10dp"

                         android:layout_centerVertical="true"
                         android:scaleType="centerInside"
                         android:background="@color/white"
                         android:src="@drawable/jiantou"
                         android:visibility="visible"
                    />

        </LinearLayout>
    </RelativeLayout>
    <FrameLayout
            android:layout_below="@id/input1"
            style="@style/divider"
            android:id="@+id/divider2"
            android:layout_width="300dp"
            android:layout_centerHorizontal="true"
            />
    <RelativeLayout
            android:id="@+id/input2"
            android:layout_width="match_parent" android:layout_height="50dp"
            android:layout_below="@id/divider2"
            android:background="@color/white"
            >
        <TextView android:layout_width="80dp" android:layout_height="wrap_content"
                  android:text="@string/mobile_num" android:textColor="@color/gray_text"
                  android:layout_centerVertical="true"
                  android:layout_marginLeft="20dp"
                  android:textSize="20sp"
                  android:id="@id/login_password_text_hint"
                />

        <EditText android:background="@null"
                  android:id="@id/sign_up_mobile_num"
                  android:inputType="number"
                  android:layout_toRightOf="@id/login_password_text_hint"
                  android:layout_centerVertical="true"
                  android:hint="@string/input_mobile_num_hint"
                  android:gravity="left"
                  android:layout_marginLeft="10dp"
                  android:layout_width="200dp" android:layout_height="wrap_content"/>

    </RelativeLayout>
    <FrameLayout
            android:layout_below="@id/input2"
            style="@style/divider"
            android:id="@+id/divider3"
            />

    <Button android:layout_width="300dp" android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/divider3"
            android:layout_marginTop="10dp"
            android:background="@drawable/exit_button"
            android:gravity="center"
            android:text="@string/next_step"
            android:enabled="false"
            android:textColor="@color/white"
            android:id="@id/sign_up_nexn_step_btn"
            />
</RelativeLayout>