<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey"
        >
    <RelativeLayout android:id="@id/login_title_bar"
                    android:background="@color/white"
                    android:layout_width="match_parent" android:layout_height="60dp">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textSize="20sp"
                  android:layout_marginLeft="20dp"
                  android:text="@string/cancel"
                  android:layout_centerVertical="true"
                  android:id="@id/login_back"
                  android:textColor="@color/gray_text"
                />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/login"
                  android:textColor="@color/black"
                  android:textSize="23sp"
                  android:layout_centerInParent="true"
                />
        <FrameLayout
                android:layout_alignParentBottom="true"
                style="@style/divider"
                />
    </RelativeLayout>
    <RelativeLayout
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:id="@id/login_username"
            android:layout_below="@id/login_title_bar"
            android:layout_width="match_parent" android:layout_height="50dp">
        <FrameLayout
                android:layout_alignParentTop="true"
                style="@style/divider"
                />
        <FrameLayout
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                style="@style/divider"
                android:layout_width="300dp"
                />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/input_username_tab" android:textColor="@color/black"
                  android:layout_centerVertical="true"
                  android:layout_marginLeft="20dp"
                  android:textSize="20sp"
                  android:id="@id/login_username_text_hint"
                />
        <EditText
                android:background="@null"
                android:id="@id/login_username_text"
                android:layout_toRightOf="@id/login_username_text_hint"
                android:layout_centerVertical="true"
                android:hint="@string/input_username_hint"
                android:inputType="text"
                android:layout_width="200dp" android:layout_height="wrap_content"/>
        <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="10dp"
                     android:id="@id/login_username_delete"
                     android:layout_centerVertical="true"
                     android:scaleType="centerCrop"
                     android:background="@color/grey"
                     android:src="@drawable/jiantou"
                     android:visibility="visible"
                />
    </RelativeLayout>
    <RelativeLayout
            android:background="@color/white"
            android:id="@id/login_password"
            android:layout_below="@id/login_username"
            android:layout_width="match_parent" android:layout_height="50dp">
        <FrameLayout
                android:layout_alignParentBottom="true"
                style="@style/divider"
                />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/input_password_tab" android:textColor="@color/black"
                  android:layout_centerVertical="true"
                  android:layout_marginLeft="20dp"
                  android:textSize="20sp"
                  android:id="@id/login_password_text_hint"
                />

        <EditText android:background="@null"
                  android:id="@id/login_password_text"
                  android:inputType="textPassword"
                  android:layout_toRightOf="@id/login_password_text_hint"
                  android:layout_centerVertical="true"
                  android:hint="@string/input_password_hint"
                  android:layout_width="200dp" android:layout_height="wrap_content"/>
        <ImageButton android:layout_width="20dp" android:layout_height="20dp"
                     android:layout_toRightOf="@id/login_password_text"
                     android:id="@id/login_password_delete"
                     android:layout_centerVertical="true"
                     android:scaleType="centerCrop"
                     android:background="@color/grey"
                     android:src="@drawable/load_succeed"
                     android:layout_marginLeft="20dp"
                     android:visibility="gone"
                />
        <!--<CheckBox android:layout_width="60dp" android:layout_height="30dp"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:button="@drawable/radio_button_index_page"-->
        <!--android:layout_marginRight="30dp"-->
        <!--android:background="@color/red"-->
        <!--android:id="@id/password_visible_swap"-->
        <!--/>-->
    </RelativeLayout>
    <Button android:layout_width="300dp" android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/login_password"
            android:layout_marginTop="10dp"
            android:background="@drawable/exit_button"
            android:gravity="center"
            android:text="@string/login"
            android:enabled="false"
            android:id="@id/login_comfirm_btn"
            />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:textSize="14sp"
              android:text="@string/mobile_sign_up"
              android:layout_below="@id/login_comfirm_btn"
              android:textColor="@color/gray_text"
              android:layout_marginTop="10dp"
              android:layout_marginLeft="10dp"
            />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:layout_alignParentRight="true"
              android:textSize="14sp"
              android:text="@string/find_password_back"
              android:layout_marginTop="10dp"
              android:layout_marginRight="10dp"
              android:layout_below="@id/login_comfirm_btn"
              android:textColor="@color/gray_text"
            />
    <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            >
        <RelativeLayout android:layout_width="0dp"
                        android:layout_height="match_parent" android:layout_weight="1">
            <LinearLayout
                    android:layout_centerInParent="true"
                    android:orientation="horizontal" android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                           android:src="@drawable/weibo"
                        />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text=""
                          android:textColor="@color/black"
                        />
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout android:layout_width="0dp"
                        android:layout_height="match_parent" android:layout_weight="1">
            <LinearLayout
                    android:layout_centerInParent="true"
                    android:orientation="horizontal" android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                           android:src="@drawable/qq"
                        />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text=""
                          android:textColor="@color/black"
                        />
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout android:layout_width="0dp"
                        android:layout_height="match_parent" android:layout_weight="1">
            <LinearLayout
                    android:layout_centerInParent="true"
                    android:orientation="horizontal" android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                           android:src="@drawable/weixin"
                        />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:text=""
                          android:textColor="@color/black"
                        />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>